// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plugins > component library 1`] = `
[
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 0.01,
    ":hide-fill-on-export": false,
    ":id": "1",
    ":name": "Root Frame",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0.01,
      },
      {
        ":x": 0,
        ":y": 0.01,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 0.01,
      ":width": 0.01,
      ":x": 0,
      ":x1": 0,
      ":x2": 0.01,
      ":y": 0,
      ":y1": 0,
      ":y2": 0.01,
    },
    ":shapes": [
      "2",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 0.01,
    ":x": 0,
    ":y": 0,
  },
  {
    ":fills": [
      {
        ":fill-color": "#B1B2B5",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 100,
    ":id": "2",
    ":name": "Rectangle",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 100,
      },
      {
        ":x": 0,
        ":y": 100,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":rx": 0,
    ":ry": 0,
    ":selrect": {
      ":height": 100,
      ":width": 100,
      ":x": 0,
      ":x1": 0,
      ":x2": 100,
      ":y": 0,
      ":y1": 0,
      ":y2": 100,
    },
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":rect",
    ":width": 100,
    ":x": 0,
    ":y": 0,
  },
]
`;

exports[`Plugins > create flex layout 1`] = `
[
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 0.01,
    ":hide-fill-on-export": false,
    ":id": "1",
    ":name": "Root Frame",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0.01,
      },
      {
        ":x": 0,
        ":y": 0.01,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 0.01,
      ":width": 0.01,
      ":x": 0,
      ":x1": 0,
      ":x2": 0.01,
      ":y": 0,
      ":y1": 0,
      ":y2": 0.01,
    },
    ":shapes": [
      "2",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 0.01,
    ":x": 0,
    ":y": 0,
  },
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 110,
    ":hide-fill-on-export": false,
    ":id": "2",
    ":layout": ":flex",
    ":layout-align-content": ":stretch",
    ":layout-align-items": ":center",
    ":layout-flex-dir": ":row",
    ":layout-gap": {
      ":column-gap": 0,
      ":row-gap": 0,
    },
    ":layout-gap-type": ":multiple",
    ":layout-grid-dir": ":column",
    ":layout-item-h-sizing": ":auto",
    ":layout-item-v-sizing": ":auto",
    ":layout-justify-content": ":center",
    ":layout-padding": {
      ":p1": 5,
      ":p2": 5,
      ":p3": 5,
      ":p4": 5,
    },
    ":layout-padding-type": ":simple",
    ":layout-wrap-type": ":nowrap",
    ":name": "Board",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 210,
        ":y": 0,
      },
      {
        ":x": 210,
        ":y": 110,
      },
      {
        ":x": 0,
        ":y": 110,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 110,
      ":width": 210,
      ":x": 0,
      ":x1": 0,
      ":x2": 210,
      ":y": 0,
      ":y1": 0,
      ":y2": 110,
    },
    ":shapes": [
      "4",
      "3",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 210,
    ":x": 0,
    ":y": 0,
  },
  {
    ":constraints-h": ":left",
    ":constraints-v": ":top",
    ":fills": [
      {
        ":fill-color": "#B1B2B5",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "2",
    ":height": 100,
    ":id": "3",
    ":name": "Rectangle",
    ":parent-id": "2",
    ":points": [
      {
        ":x": 5,
        ":y": 5,
      },
      {
        ":x": 105,
        ":y": 5,
      },
      {
        ":x": 105,
        ":y": 105,
      },
      {
        ":x": 5,
        ":y": 105,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":rx": 0,
    ":ry": 0,
    ":selrect": {
      ":height": 100,
      ":width": 100,
      ":x": 5,
      ":x1": 5,
      ":x2": 105,
      ":y": 5,
      ":y1": 5,
      ":y2": 105,
    },
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":rect",
    ":width": 100,
    ":x": 5,
    ":y": 5,
  },
  {
    ":constraints-h": ":left",
    ":constraints-v": ":top",
    ":fills": [
      {
        ":fill-color": "#B1B2B5",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "2",
    ":height": 100,
    ":id": "4",
    ":name": "Ellipse",
    ":parent-id": "2",
    ":points": [
      {
        ":x": 105,
        ":y": 5,
      },
      {
        ":x": 205,
        ":y": 5,
      },
      {
        ":x": 205,
        ":y": 105,
      },
      {
        ":x": 105,
        ":y": 105,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 100,
      ":width": 100,
      ":x": 105,
      ":x1": 105,
      ":x2": 205,
      ":y": 5,
      ":y1": 5,
      ":y2": 105,
    },
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":circle",
    ":width": 100,
    ":x": 105,
    ":y": 5,
  },
]
`;

exports[`Plugins > create frame - text - rectable 1`] = `
[
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 0.01,
    ":hide-fill-on-export": false,
    ":id": "1",
    ":name": "Root Frame",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0.01,
      },
      {
        ":x": 0,
        ":y": 0.01,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 0.01,
      ":width": 0.01,
      ":x": 0,
      ":x1": 0,
      ":x2": 0.01,
      ":y": 0,
      ":y1": 0,
      ":y2": 0.01,
    },
    ":shapes": [
      "2",
      "3",
      "4",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 0.01,
    ":x": 0,
    ":y": 0,
  },
  {
    ":content": {
      ":children": [
        {
          ":children": [
            {
              ":children": [
                {
                  ":fills": [
                    {
                      ":fill-color": "#000000",
                      ":fill-opacity": 1,
                    },
                  ],
                  ":font-family": "sourcesanspro",
                  ":font-id": "sourcesanspro",
                  ":font-size": "14",
                  ":font-style": "normal",
                  ":font-variant-id": "regular",
                  ":font-weight": "400",
                  ":letter-spacing": "0",
                  ":line-height": "1.2",
                  ":text": "Hello from plugin",
                  ":text-align": "left",
                  ":text-decoration": "none",
                  ":text-transform": "none",
                  ":typography-ref-file": null,
                  ":typography-ref-id": null,
                },
              ],
              ":fills": [
                {
                  ":fill-color": "#000000",
                  ":fill-opacity": 1,
                },
              ],
              ":font-family": "sourcesanspro",
              ":font-id": "sourcesanspro",
              ":font-size": "14",
              ":font-style": "normal",
              ":font-variant-id": "regular",
              ":font-weight": "400",
              ":letter-spacing": "0",
              ":line-height": "1.2",
              ":text-align": "left",
              ":text-decoration": "none",
              ":text-transform": "none",
              ":type": "paragraph",
              ":typography-ref-file": null,
              ":typography-ref-id": null,
            },
          ],
          ":type": "paragraph-set",
        },
      ],
      ":type": "root",
    },
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":grow-type": ":auto-width",
    ":height": 17,
    ":id": "2",
    ":name": "Text",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 684,
        ":y": 540,
      },
      {
        ":x": 786,
        ":y": 540,
      },
      {
        ":x": 786,
        ":y": 557,
      },
      {
        ":x": 684,
        ":y": 557,
      },
    ],
    ":position-data": [
      {
        ":direction": "ltr",
        ":fills": [
          {
            ":fill-color": "#000000",
            ":fill-opacity": 1,
          },
        ],
        ":font-family": "sourcesanspro",
        ":font-size": "14px",
        ":font-style": "normal",
        ":font-weight": "400",
        ":height": 18,
        ":letter-spacing": "normal",
        ":text": "Hello from plugin",
        ":text-decoration": "none solid rgb(0, 0, 0)",
        ":text-transform": "none",
        ":width": 101.5313,
        ":x": 684,
        ":x1": 0,
        ":x2": 101.5313,
        ":y": 557,
        ":y1": -1,
        ":y2": 17,
      },
    ],
    ":rotation": 0,
    ":selrect": {
      ":height": 17,
      ":width": 102,
      ":x": 684,
      ":x1": 684,
      ":x2": 786,
      ":y": 540,
      ":y1": 540,
      ":y2": 557,
    },
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":text",
    ":width": 102,
    ":x": 684,
    ":y": 540,
  },
  {
    ":fills": [
      {
        ":fill-color": "#B1B2B5",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 200,
    ":id": "3",
    ":name": "Rectangle",
    ":parent-id": "1",
    ":plugin-data": {
      ":plugin/TEST": {
        "customKey": "customValue",
      },
    },
    ":points": [
      {
        ":x": 684,
        ":y": 540,
      },
      {
        ":x": 884,
        ":y": 540,
      },
      {
        ":x": 884,
        ":y": 740,
      },
      {
        ":x": 684,
        ":y": 740,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":rx": 0,
    ":ry": 0,
    ":selrect": {
      ":height": 200,
      ":width": 200,
      ":x": 684,
      ":x1": 684,
      ":x2": 884,
      ":y": 540,
      ":y1": 540,
      ":y2": 740,
    },
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":rect",
    ":width": 200,
    ":x": 684,
    ":y": 540,
  },
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 300,
    ":hide-fill-on-export": false,
    ":id": "4",
    ":name": "Frame name",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 684,
        ":y": 540,
      },
      {
        ":x": 984,
        ":y": 540,
      },
      {
        ":x": 984,
        ":y": 840,
      },
      {
        ":x": 684,
        ":y": 840,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":rx": 8,
    ":ry": 8,
    ":selrect": {
      ":height": 300,
      ":width": 300,
      ":x": 684,
      ":x1": 684,
      ":x2": 984,
      ":y": 540,
      ":y1": 540,
      ":y2": 840,
    },
    ":shapes": [
      "5",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 300,
    ":x": 684,
    ":y": 540,
  },
  {
    ":constraints-h": ":left",
    ":constraints-v": ":top",
    ":content": {
      ":children": [
        {
          ":children": [
            {
              ":children": [
                {
                  ":fills": [
                    {
                      ":fill-color": "#000000",
                      ":fill-opacity": 1,
                    },
                  ],
                  ":font-family": "sourcesanspro",
                  ":font-id": "sourcesanspro",
                  ":font-size": "14",
                  ":font-style": "normal",
                  ":font-variant-id": "regular",
                  ":font-weight": "400",
                  ":letter-spacing": "0",
                  ":line-height": "1.2",
                  ":text": "Hello from frame",
                  ":text-align": "left",
                  ":text-decoration": "none",
                  ":text-transform": "none",
                  ":typography-ref-file": null,
                  ":typography-ref-id": null,
                },
              ],
              ":fills": [
                {
                  ":fill-color": "#000000",
                  ":fill-opacity": 1,
                },
              ],
              ":font-family": "sourcesanspro",
              ":font-id": "sourcesanspro",
              ":font-size": "14",
              ":font-style": "normal",
              ":font-variant-id": "regular",
              ":font-weight": "400",
              ":letter-spacing": "0",
              ":line-height": "1.2",
              ":text-align": "left",
              ":text-decoration": "none",
              ":text-transform": "none",
              ":type": "paragraph",
              ":typography-ref-file": null,
              ":typography-ref-id": null,
            },
          ],
          ":type": "paragraph-set",
        },
      ],
      ":type": "root",
    },
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "4",
    ":grow-type": ":auto-width",
    ":height": 17,
    ":id": "5",
    ":name": "Text",
    ":parent-id": "4",
    ":points": [
      {
        ":x": 10,
        ":y": 10,
      },
      {
        ":x": 109,
        ":y": 10,
      },
      {
        ":x": 109,
        ":y": 27,
      },
      {
        ":x": 10,
        ":y": 27,
      },
    ],
    ":position-data": [
      {
        ":direction": "ltr",
        ":fills": [
          {
            ":fill-color": "#000000",
            ":fill-opacity": 1,
          },
        ],
        ":font-family": "sourcesanspro",
        ":font-size": "14px",
        ":font-style": "normal",
        ":font-weight": "400",
        ":height": 18,
        ":letter-spacing": "normal",
        ":text": "Hello from frame",
        ":text-decoration": "none solid rgb(0, 0, 0)",
        ":text-transform": "none",
        ":width": 98.7344,
        ":x": 10,
        ":x1": 0,
        ":x2": 98.7344,
        ":y": 27,
        ":y1": -1,
        ":y2": 17,
      },
    ],
    ":rotation": 0,
    ":selrect": {
      ":height": 17,
      ":width": 99,
      ":x": 10,
      ":x1": 10,
      ":x2": 109,
      ":y": 10,
      ":y1": 10,
      ":y2": 27,
    },
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":text",
    ":width": 99,
    ":x": 10,
    ":y": 10,
  },
]
`;

exports[`Plugins > create grid layout 1`] = `
[
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 0.01,
    ":hide-fill-on-export": false,
    ":id": "1",
    ":name": "Root Frame",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0.01,
      },
      {
        ":x": 0,
        ":y": 0.01,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 0.01,
      ":width": 0.01,
      ":x": 0,
      ":x1": 0,
      ":x2": 0.01,
      ":y": 0,
      ":y1": 0,
      ":y2": 0.01,
    },
    ":shapes": [
      "2",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 0.01,
    ":x": 0,
    ":y": 0,
  },
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 100,
    ":hide-fill-on-export": false,
    ":id": "2",
    ":layout": ":grid",
    ":layout-align-content": ":stretch",
    ":layout-align-items": ":center",
    ":layout-gap": {
      ":column-gap": 10,
      ":row-gap": 10,
    },
    ":layout-gap-type": ":multiple",
    ":layout-grid-cells": [
      {
        ":align-self": ":auto",
        ":column": 1,
        ":column-span": 1,
        ":id": "2",
        ":justify-self": ":auto",
        ":position": ":auto",
        ":row": 1,
        ":row-span": 1,
        ":shapes": [],
      },
      {
        ":align-self": ":auto",
        ":column": 1,
        ":column-span": 1,
        ":id": "2",
        ":justify-self": ":auto",
        ":position": ":auto",
        ":row": 2,
        ":row-span": 1,
        ":shapes": [],
      },
      {
        ":align-self": ":auto",
        ":column": 2,
        ":column-span": 1,
        ":id": "2",
        ":justify-self": ":auto",
        ":position": ":auto",
        ":row": 1,
        ":row-span": 1,
        ":shapes": [],
      },
      {
        ":align-self": ":auto",
        ":column": 2,
        ":column-span": 1,
        ":id": "2",
        ":justify-self": ":auto",
        ":position": ":auto",
        ":row": 2,
        ":row-span": 1,
        ":shapes": [],
      },
    ],
    ":layout-grid-columns": [
      {
        ":type": ":flex",
        ":value": 1,
      },
      {
        ":type": ":flex",
        ":value": 1,
      },
    ],
    ":layout-grid-dir": ":row",
    ":layout-grid-rows": [
      {
        ":type": ":flex",
        ":value": 1,
      },
      {
        ":type": ":flex",
        ":value": 1,
      },
    ],
    ":layout-justify-content": ":space-between",
    ":layout-justify-items": ":start",
    ":layout-padding": {
      ":p1": 5,
      ":p2": 5,
      ":p3": 5,
      ":p4": 5,
    },
    ":layout-padding-type": ":simple",
    ":name": "Board",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 100,
      },
      {
        ":x": 0,
        ":y": 100,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 100,
      ":width": 100,
      ":x": 0,
      ":x1": 0,
      ":x2": 100,
      ":y": 0,
      ":y1": 0,
      ":y2": 100,
    },
    ":shapes": [],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 100,
    ":x": 0,
    ":y": 0,
  },
]
`;

exports[`Plugins > group and ungroup 1`] = `
[
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 0.01,
    ":hide-fill-on-export": false,
    ":id": "1",
    ":name": "Root Frame",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0.01,
      },
      {
        ":x": 0,
        ":y": 0.01,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 0.01,
      ":width": 0.01,
      ":x": 0,
      ":x1": 0,
      ":x2": 0.01,
      ":y": 0,
      ":y1": 0,
      ":y2": 0.01,
    },
    ":shapes": [
      "4",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 0.01,
    ":x": 0,
    ":y": 0,
  },
  {
    ":fills": [
      {
        ":fill-color": "#B1B2B5",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 100,
    ":id": "2",
    ":name": "Rectangle",
    ":parent-id": "4",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 100,
      },
      {
        ":x": 0,
        ":y": 100,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":rx": 0,
    ":ry": 0,
    ":selrect": {
      ":height": 100,
      ":width": 100,
      ":x": 0,
      ":x1": 0,
      ":x2": 100,
      ":y": 0,
      ":y1": 0,
      ":y2": 100,
    },
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":rect",
    ":width": 100,
    ":x": 0,
    ":y": 0,
  },
  {
    ":fills": [
      {
        ":fill-color": "#B1B2B5",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 100,
    ":id": "3",
    ":name": "Rectangle",
    ":parent-id": "4",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 100,
      },
      {
        ":x": 0,
        ":y": 100,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":rx": 0,
    ":ry": 0,
    ":selrect": {
      ":height": 100,
      ":width": 100,
      ":x": 0,
      ":x1": 0,
      ":x2": 100,
      ":y": 0,
      ":y1": 0,
      ":y2": 100,
    },
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":rect",
    ":width": 100,
    ":x": 0,
    ":y": 0,
  },
  {
    ":fills": [],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 100,
    ":id": "4",
    ":index": 2,
    ":name": "Group",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 100,
      },
      {
        ":x": 0,
        ":y": 100,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 100,
      ":width": 100,
      ":x": 0,
      ":x1": 0,
      ":x2": 100,
      ":y": 0,
      ":y1": 0,
      ":y2": 100,
    },
    ":shapes": [
      "2",
      "3",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":group",
    ":width": 100,
    ":x": 0,
    ":y": 0,
  },
]
`;

exports[`Plugins > insert svg 1`] = `
[
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 0.01,
    ":hide-fill-on-export": false,
    ":id": "1",
    ":name": "Root Frame",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0.01,
      },
      {
        ":x": 0,
        ":y": 0.01,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 0.01,
      ":width": 0.01,
      ":x": 0,
      ":x1": 0,
      ":x2": 0.01,
      ":y": 0,
      ":y1": 0,
      ":y2": 0.01,
    },
    ":shapes": [
      "2",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 0.01,
    ":x": 0,
    ":y": 0,
  },
  {
    ":fills": [],
    ":flip-x": false,
    ":flip-y": false,
    ":frame-id": "1",
    ":height": 130,
    ":id": "2",
    ":name": "Test icon",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 684,
        ":y": 540,
      },
      {
        ":x": 984,
        ":y": 540,
      },
      {
        ":x": 984,
        ":y": 670,
      },
      {
        ":x": 684,
        ":y": 670,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 130,
      ":width": 300,
      ":x": 684,
      ":x1": 684,
      ":x2": 984,
      ":y": 540,
      ":y1": 540,
      ":y2": 670,
    },
    ":shapes": [
      "3",
      "4",
      "5",
    ],
    ":strokes": [],
    ":svg-attrs": {
      ":height": "130",
      ":width": "300",
    },
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":group",
    ":width": 300,
    ":x": 684,
    ":y": 540,
  },
  {
    ":fills": [],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 130,
    ":hidden": true,
    ":id": "3",
    ":name": "base-background",
    ":parent-id": "2",
    ":points": [
      {
        ":x": 684,
        ":y": 540,
      },
      {
        ":x": 984,
        ":y": 540,
      },
      {
        ":x": 984,
        ":y": 670,
      },
      {
        ":x": 684,
        ":y": 670,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":rx": 0,
    ":ry": 0,
    ":selrect": {
      ":height": 130,
      ":width": 300,
      ":x": 684,
      ":x1": 684,
      ":x2": 984,
      ":y": 540,
      ":y1": 540,
      ":y2": 670,
    },
    ":strokes": [],
    ":svg-attrs": {
      ":fill": "none",
      ":id": "base-background",
    },
    ":svg-defs": {},
    ":svg-viewbox": {
      ":height": 130,
      ":width": 300,
      ":x": 0,
      ":x1": 0,
      ":x2": 300,
      ":y": 0,
      ":y1": 0,
      ":y2": 130,
    },
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":rect",
    ":width": 300,
    ":x": 684,
    ":y": 540,
  },
  {
    ":fills": [
      {
        ":fill-color": "#0000ff",
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 100,
    ":id": "4",
    ":name": "svg-rect",
    ":parent-id": "2",
    ":points": [
      {
        ":x": 694,
        ":y": 550,
      },
      {
        ":x": 894,
        ":y": 550,
      },
      {
        ":x": 894,
        ":y": 650,
      },
      {
        ":x": 694,
        ":y": 650,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":rx": 20,
    ":ry": 20,
    ":selrect": {
      ":height": 100,
      ":width": 200,
      ":x": 694,
      ":x1": 694,
      ":x2": 894,
      ":y": 550,
      ":y1": 550,
      ":y2": 650,
    },
    ":strokes": [],
    ":svg-attrs": {},
    ":svg-defs": {},
    ":svg-viewbox": {
      ":height": 100,
      ":width": 200,
      ":x": 10,
      ":x1": 10,
      ":x2": 210,
      ":y": 10,
      ":y1": 10,
      ":y2": 110,
    },
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":rect",
    ":width": 200,
    ":x": 694,
    ":y": 550,
  },
  {
    ":content": "Sorry, your browser does not support inline SVG.",
    ":fills": [],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 130,
    ":id": "5",
    ":name": "svg-node",
    ":parent-id": "2",
    ":points": [
      {
        ":x": 684,
        ":y": 540,
      },
      {
        ":x": 984,
        ":y": 540,
      },
      {
        ":x": 984,
        ":y": 670,
      },
      {
        ":x": 684,
        ":y": 670,
      },
    ],
    ":proportion": 2.3077,
    ":proportion-lock": true,
    ":rotation": 0,
    ":selrect": {
      ":height": 130,
      ":width": 300,
      ":x": 684,
      ":x1": 684,
      ":x2": 984,
      ":y": 540,
      ":y1": 540,
      ":y2": 670,
    },
    ":strokes": [],
    ":svg-attrs": {},
    ":svg-defs": {},
    ":svg-viewbox": {
      ":height": 130,
      ":width": 300,
      ":x": 0,
      ":x1": 0,
      ":x2": 300,
      ":y": 0,
      ":y1": 0,
      ":y2": 130,
    },
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":svg-raw",
    ":width": 300,
    ":x": 684,
    ":y": 540,
  },
]
`;

exports[`Plugins > plugin data 1`] = `
[
  {
    ":fills": [
      {
        ":fill-color": "#FFFFFF",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 0.01,
    ":hide-fill-on-export": false,
    ":id": "1",
    ":name": "Root Frame",
    ":parent-id": "1",
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0,
      },
      {
        ":x": 0.01,
        ":y": 0.01,
      },
      {
        ":x": 0,
        ":y": 0.01,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":selrect": {
      ":height": 0.01,
      ":width": 0.01,
      ":x": 0,
      ":x1": 0,
      ":x2": 0.01,
      ":y": 0,
      ":y1": 0,
      ":y2": 0.01,
    },
    ":shapes": [
      "2",
    ],
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":frame",
    ":width": 0.01,
    ":x": 0,
    ":y": 0,
  },
  {
    ":fills": [
      {
        ":fill-color": "#B1B2B5",
        ":fill-opacity": 1,
      },
    ],
    ":flip-x": null,
    ":flip-y": null,
    ":frame-id": "1",
    ":height": 100,
    ":id": "2",
    ":name": "Rectangle",
    ":parent-id": "1",
    ":plugin-data": {
      ":plugin/TEST": {
        "testData": "test",
      },
    },
    ":points": [
      {
        ":x": 0,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 0,
      },
      {
        ":x": 100,
        ":y": 100,
      },
      {
        ":x": 0,
        ":y": 100,
      },
    ],
    ":proportion": 1,
    ":proportion-lock": false,
    ":rotation": 0,
    ":rx": 0,
    ":ry": 0,
    ":selrect": {
      ":height": 100,
      ":width": 100,
      ":x": 0,
      ":x1": 0,
      ":x2": 100,
      ":y": 0,
      ":y1": 0,
      ":y2": 100,
    },
    ":strokes": [],
    ":transform": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":transform-inverse": {
      ":a": 1,
      ":b": 0,
      ":c": 0,
      ":d": 1,
      ":e": 0,
      ":f": 0,
    },
    ":type": ":rect",
    ":width": 100,
    ":x": 0,
    ":y": 0,
  },
]
`;
